# Noceasy

./: .gitattributes  .gitignore  .zshenv  .zshrc  CHANGELOG.md  README.md  decman_setup.sh  gabrln  go.sh  install.sh  install_and_test.sh  launch.sh  pyproject.toml  run_tests.sh  source.py  t.sh
.config/: kitty.conf  mimeapps.list  starship.toml  user-dirs.dirs
.config/fastfetch/: config.jsonc
.config/greetd/: greeter.toml
.config/gtk-3.0/: settings.ini
.config/herdr/: config.toml
.config/hypr/: .luarc.json  hyprland.conf  hyprland.lua  noctalia.lua
.config/kitty/: kitty.conf
.config/mango/: config.conf  mango.conf
.config/niri/: config.kdl
.config/noctalia/: settings.toml
.config/nvim/: lazy-lock.json
.config/opencode/: opencode.jsonc
.config/pypr/: config.toml
.config/qt6ct/: qt6ct.conf
.config/rofi/: menu.yaml
.config/uwsm/: env
.config/xdg-desktop-portal/: niri-portals.conf
.config/yazi/: keymap.toml  opener.toml  yazi.toml
.config/zellij/: config.kdl
.config/zsh/: .zshrc  aliases.zsh  bindings.zsh  fzf.zsh  plugins.zsh  prompt.zsh
.github/prompts/: plan-shelly-to-pacman-yay-migration.prompt.md
.github/workflows/: ci.yml
installer/: README.md  __init__.py  __main__.py  backup.py  cli.py  config.py  config.toml  errors.py  exec.py  gabrln  logger.py  privesc.py  privilege.py  progress.py  runner.py  state.py  toml_cache.py
installer/core/: config.py  errors.py  runner.py
installer/dev/: gen_keyhints.py  test_gen_keyhints.py
installer/infra/: backup.py
installer/lib/: backup.sh  errors.sh  logger.sh  progress.sh  state.sh  utils.sh
installer/manifests/: aur.toml  dotfiles.toml  flatpak.toml  packages.toml
installer/modules/: 00-preflight.sh  01-backup.sh  02-pacman-bootstrap.sh  03-shelly-official.sh  04-shelly-aur.sh  04-yay-aur.sh  05-flatpak.sh  05-shelly-flatpak.sh  (+30 more)
tests/: conftest.py  test_backup.py  test_base.py  test_cli.py  test_config.py  test_modules.py  test_privesc.py  test_progress.py  test_state.py
(+42 files in other folders)
