[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noceasy-installer"
version = "0.1.0"
description = "Noceasy: fast Noctalia v5 installer for Arch/CachyOS"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["installer*"]

[tool.setuptools.package-data]
"installer" = ["manifests/*.toml", "polkit/*"]
