[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noceasy-installer"
version = "0.1.0"
description = "Noceasy: fast Noctalia v5 installer for Arch/CachyOS"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
]

[project.scripts]
noceasy = "installer.cli:main"

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["installer*"]

[tool.setuptools.package-data]
"installer" = ["manifests/*.toml"]

[dependency-groups]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = false
python_version = "3.11"
warn_unused_ignores = false
warn_redundant_casts = true
warn_return_any = true
ignore_missing_imports = true
